k8s/overlays/prod/pricing-api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-api
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: pricing-api
          image: pricingplatform/pricing-api:prod
