k8s/overlays/prod/rule-api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rule-api
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: rule-api
          image: pricingplatform/rule-api:prod
